2006-01-21  Yves Combe  <yves@ycombe.net>

	gcompris -l nowhere/menu2 to test this new menu.

	* boards/Makefile.am:
	* boards/menu2.xml.in:
	* src/boards/Makefile.am:
	* src/boards/menu2.c: (menu_pause), (menu_start), (create_panel),
	(display_section), (menu_end), (menu_is_our_board), (menu_config),
	(display_board_icon), (next_spot), (menu_create_item),
	(item_event), (set_content), (create_info_area), (free_stuff),
	(get_ratio), (create_top):
	* src/gcompris/gameutil.c: (gcompris_get_menulist):

2006-01-19  Bruno coudoin  <bruno.coudoin@free.fr>

	Improved board english description.
	Remade dice icons based on openclipart work.

	* boards/boardicons/README:
	* boards/boardicons/smallnumbers.png:
	* boards/boardicons/smallnumbers2.png:
	* boards/computer.xml.in:
	* boards/keyboard.xml.in:
	* boards/strategy.xml.in:

2006-01-18  Yves Combe  <yves@ycombe.net>

	new menus architecture improvment.
	Resize some icons.

	* boards/awele.xml.in:
	* boards/boardicons/ear.png:
	* boards/boardicons/memory_elephant.png:
	* boards/electric.xml.in:
	* boards/experimental.xml.in:
	* boards/maze.xml.in:
	* boards/maze2DRelative.xml.in:
	* boards/maze3D.xml.in:
	* boards/mazeInvisible.xml.in:
	* boards/mazeMenu.xml.in:

2006-01-18  Yves Combe  <yves@ycombe.net>

	reorganise menus
	suppress -d filter option in menu.c
	add --experimental
	probably some boards will disappears (if typo in xml.in section).
	pass version to 7.29 to force reread xml

	* boards/Makefile.am:
	* boards/advanced_colors.xml.in:
	* boards/algebra_by.xml.in:
	* boards/algebra_group.xml.in:
	* boards/algebra_guesscount.xml.in:
	* boards/algebra_minus.xml.in:
	* boards/algebra_plus.xml.in:
	* boards/algebramenu.xml.in:
	* boards/algorithm.xml.in:
	* boards/awele.xml.in:
	* boards/babymatch.xml.in:
	* boards/babyshapes.xml.in:
	* boards/ballcatch.xml.in:
	* boards/bargame.xml.in:
	* boards/billard.xml.in:
	* boards/boardicons/boards.png:
	* boards/boardicons/discovery.png:
	* boards/boardicons/ear.png: